# modxo

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
js/: modxo_bios_packer.js
src/: main.c
src/flash_mem/: flash_mem.c  flash_mem.h
src/flash_rom/: flash_rom.c  flash_rom.h
src/led/: led.c  led.h
src/led/pico/: pico_led.c  pico_led.h
src/led/ws2812/: ws2812_led.c  ws2812_led.h
src/lpc/: lpc_comm.pio  lpc_interface.c  lpc_interface.h  lpc_log.c  lpc_log.h  lpc_mem_read.pio  superio.h
src/superio/: LPC47M152.c  LPC47M152.h  UART_16550.c  UART_16550.h
style/: style.css
tools/: dockerbuild.sh  flashbin_to_uf2.py  modxo_go.go
